# CPPDiplom

./: CMakeLists.txt  README.md  config.ini  main.cpp  types.h
http_search/: db.cpp  db.h
http_server/: http_connection.cpp
